feat: 加入图标和打包脚本

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
         }
     </style>
     <link rel="stylesheet" href="/static/css/sober-theme.css">
+    <link rel="icon" href="/static/img/Nega_Nebulus_Logo.png">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
             <div slot="start" style="width: auto;">
                 <s-navigation mode="rail" onchange="handleNavChange(event)">
                     <s-icon-button slot="start" type="filled-tonal">
-                        <img src="/static/img/cat.svg" alt="Logo" style="width: 40px; height: 40px;">
+                        <img src="/static/img/Nega_Nebulus_Logo.png" alt="Logo" style="width: 40px; height: 40px;">
                     </s-icon-button>
 
                     <s-navigation-item selected="true" data-page="dashboard">
